# nfl-sim-starter

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
configs/: tiny.yaml
configs/exp/: base.yaml
configs/policy/: neutral.yaml
scripts/: eval_report.py  prepare_data.py  quick_eval.py  refactor_constants.py  simulate_games.py  train_tiny.py
src/nflsim/: config.py  constants.py  state.py
src/nflsim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/nflsim/decoding/: constrained.py  knobs.py  simulate.py
src/nflsim/eval/: eval_report.py  metrics.py
src/nflsim/features/: vocab.py
src/nflsim/models/: __init__.py  components.py  play_transformer.py
src/nflsim/rules/: fsm.py
src/nflsim/training/: train_tiny.py
tests/: test_decoding_legality.py  test_leakage.py  test_rules.py  test_rules_fsm.py  test_small_e2e.py
