[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nflsim"
version = "0.1.0"
description = "NFL play-by-play transformer simulator (starter)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5,<2.0",
    "pyarrow>=15,<16",
    "numpy>=1.26",
    "scikit-learn>=1.4.0",
    "pydantic>=2.5.0",
    "hydra-core>=1.3.2",
    "mlflow>=2.12.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "matplotlib>=3.8.0",
    "nfl-data-py>=0.3.3",
    "pyyaml>=6.0.1",
]
