[project]
name = "nflsim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy","pandas","pyarrow","pydantic>=2","typer","hydra-core","scikit-learn","torch","tqdm"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B","SIM","PL","RUF"]
lint.ignore = ["E203"]
exclude = ["data/", "datasets/", "runs/", "notebooks/"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = "(^notebooks/|^data/|^datasets/|^runs/)"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --maxfail=1"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PL","RUF"]
ignore = []
per-file-ignores = {
    "src/nflsim/decoding/simulate.py" = ["E701","E702","E501","PLR2004"],
    "src/nflsim/eval/eval_report.py" = ["E701","E702","E501"],
    "src/nflsim/training/train_tiny.py" = ["E701","E702","E501","PLR0913","PLR0915"],
}
